@@ -94,6 +94,7 @@ Version 1.5.0-svn:
    * clean up gcc 4.3 warnings so the game now builds on fedora rawhide
      with warnings treated as errors. A few of bugs were found in the
      process as well.
+   * new progressive parameter for animations : submerge
 
 Version 1.4:
  * language and i18n:
